--- a/parser.ini
+++ b/parser.ini
@@ -1,21 +1,21 @@
 [Objects_tab]
-max_page_spin_box=0
-start_url_line_edit=http://quotes.toscrape.com
-xpath_next_page_line_edit="//li[@class=\"next\"]/a/@href"
-xpath_objects_line_edit="//div[@class=\"quote\"]"
-xpath_singles_pages_line_edit=//span/a/@href
-xpaths_objects_elements_text_edit="\x422\x435\x43a\x441\x442: //span[@class=\"text\"]//text()\n\x410\x432\x442\x43e\x440: //small[@class=\"author\"]//text()\n\x421\x441\x44b\x43b\x43a\x430: //span/a/@href\n\n\n"
+max_page_spin_box=3
+start_url_line_edit="https://www.avito.ru/krasnodarskiy_kray/telefony?q=iphone+7"
+xpath_next_page_line_edit=
+xpath_objects_line_edit="//div[contains(@class, \"snippet-horizontal\")]"
+xpath_singles_pages_line_edit=
+xpaths_objects_elements_text_edit="\x41d\x430\x438\x43c\x435\x43d\x43e\x432\x430\x43d\x438\x435: //span[@itemprop=\"name\"]//text()\n\x426\x435\x43d\x430: //div[@class=\"snippet-price-row\"]//meta[@itemprop=\"price\"]/@content\n\x413\x43e\x440\x43e\x434: //span[@class=\"item-address-georeferences-item__content\"]//text()\n"
 
 [Parser]
-domain=http://quotes.toscrape.com
-scaner_mode_objects=false
-scaner_mode_objects_and_single=true
+domain=https://www.avito.ru
+scaner_mode_objects=true
+scaner_mode_objects_and_single=false
 scaner_mode_single=false
 tab_active=1
 
 [Single_tab]
-single_urls_text_edit=http://quotes.toscrape.com/author/Albert-Einstein/\nhttp://quotes.toscrape.com/author/J-K-Rowling\nhttp://quotes.toscrape.com/author/Jane-Austen
-xpaths_single_elements_text_edit="\x430\x432\x442\x43e\x440: //h3[@class='author-title']/text()\n\x434\x435\x43d\x44c \x440\x43e\x436\x434\x435\x43d\x438\x44f: //p/span[@class=\"author-born-date\"]/text()\n\x431\x438\x43e\x433\x440\x430\x444\x438\x44f: //div[@class=\"author-description\"]/text()"
+single_urls_text_edit=
+xpaths_single_elements_text_edit=
 
 [Window]
 geometry=@Rect(667 117 1182 874)
