Адаптировал для windows

--- a/parser.ini
+++ b/parser.ini
@@ -1,13 +1,13 @@
 [Objects_tab]
 max_page_spin_box=0
-start_url_line_edit="https://www.avito.ru/krasnodarskiy_kray/telefony?q=iphone+7"
+start_url_line_edit=http://bootstrap.loc
 xpath_next_page_line_edit=
 xpath_objects_line_edit="//div[contains(@class, \"snippet-horizontal\")]"
 xpath_singles_pages_line_edit=
 xpaths_objects_elements_text_edit="\x41d\x430\x438\x43c\x435\x43d\x43e\x432\x430\x43d\x438\x435: //span[@itemprop=\"name\"]//text()\n\x426\x435\x43d\x430: //div[@class=\"snippet-price-row\"]//meta[@itemprop=\"price\"]/@content\n\x413\x43e\x440\x43e\x434: //span[@class=\"item-address-georeferences-item__content\"]//text()\n"
 
 [Parser]
-domain=https://www.avito.ru
+domain=http://bootstrap.loc
 scaner_mode_objects=true
 scaner_mode_objects_and_single=false
 scaner_mode_single=false
@@ -18,4 +18,4 @@ single_urls_text_edit=
 xpaths_single_elements_text_edit=
 
 [Window]
-geometry=@Rect(257 180 1309 670)
+geometry=@Rect(456 173 1309 670)
